--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "chat-backend",
-  "version": "0.0.1",
+  "name": "webchat-backend",
+  "version": "0.1.0",
   "description": "RESTful API based chat server",
   "main": "server.js",
   "scripts": {
